--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -106,7 +106,7 @@
      </tr>
      <tr>
        <td>SPG7</td>
-       <td>coding_sequence_variant&amp;missense_variant&amp;protein_altering_variant</td>
+       <td>missense_variant</td>
        <td>het (de-novo) (mosaic)</td>
        <td style='white-space: nowrap'>chr16:89531961-89531961 G>A</td>
        <td>n/a</td>
@@ -143,7 +143,7 @@
      </tr>
      <tr>
        <td>SLC25A15</td>
-       <td>coding_sequence_variant&amp;missense_variant&amp;protein_altering_variant</td>
+       <td>missense_variant</td>
        <td>hom (comp-het)</td>
        <td style='white-space: nowrap'>chr13:40793233-40793233 T>A (manually curated)</td>
        <td>n/a</td>
