--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -335,10 +335,11 @@ SPG7</td><td>77</td><td>chr16</td><td>89554466-89554542
 </tr><tr><td>SPG7</td><td>HGNC:11237</td><td>602783</td><td>607259</td><td>Spastic paraplegia 7, autosomal recessive, 607259 (3)</td><td>no</td>
 </tr></table>
 
-<p><b>Polygenic Risk Scores (PRS)</b></p>
+<p><b>Polygenic Risk Scores (PRS)*</b></p>
 <table>
 <tr><td><b>Trait</b></td><td><b>PRS</b></td><td><b>Publication</b></td><td><b>Score</b></td><td><b>z-score</b></td><td><b>population (estimated from NGS)</b></td></tr>
 <tr><td>Breast Cancer</td><td>PGS000004</td><td>Mavaddat N et al. Am J Hum Genet (2018). doi:10.1016/j.ajhg.2018.11.002</td><td>-0.2773</td><td>0.240</td><td>European</td></tr></table>
 <p>A validated risk estimation program must be used to judge the clinical importance of a PRS, e.g. CanRisk.org for breast cancer. The ethnicity of the patient must also be considered.</p>
+<p>This analysis is not part of the scope of accreditation.</p>
 	</body>
 </html>
